src/test/deca/syntax/invalid/test_lex/hello_world/string_backslash.deca
// Description:
//    Println d'un string avec backslash.
//    [Lexicographie], Chaines de charactères:
//    On définit STRING_CAR comme l’ensemble de tous les caractères, à l’exception des caractères '"', '\'
//    et de EOL (fin de ligne).
//
// Resultats:
//    Erreur lexeur ligne 14: ne peut pas reconnaitre \.
//
// Historique:
//    cree le 01/01/2022

{
        println(" \ ");
}
